# RainText

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
assets/icons/: appicon.rc
assets/ui/: login_window.ui  main_window.ui
include/: include.cmake
include/RainText/: encrypt_decrypt.hpp  enrollment_manager.hpp  login.hpp  record_list_model.hpp  register.hpp  setting_loader.hpp  structs.hpp  user_db.hpp
include/RainText/gui/: copy_to_clipboard.h  generate_password.h  generate_password.hpp  login_register_manager.h  login_register_manager.hpp
include/RainText/hash/: hash.hpp
include/RainText/register_login/: login.hpp  register.hpp
include/RainText/settings/: setting_loader.h
json/: settings.json
lib/: CMakeLists.txt
lib/md5/: CMakeLists.txt  md5.cpp  md5.h
locales/: czech-cz_cs.qm  czech-cz_cs.ts  english-en_us.qm  english-en_us.ts  locales.qrc
qml/: BorderedButton.qml  CloseButton.qml  CustomCheckBox.qml  CustomComboBox.qml  FlatButton.qml  IconButton.qml  LoadDbScreen.qml  LoginRegisterScreen.qml  ModernTextField.qml  MyProgressBar.qml  PasswordManagerScreen.qml  PasswordRecordListItem.qml  SizePicker.qml  main.qml  qml.qrc  qrc.cmake
qml/fonts/: fonts.qrc
qml/images/: images.qrc
src/: database_utils.cpp  encrypt_decrypt.cpp  enrollment_manager.cpp  gui.cpp  hash.cpp  login.cpp  main.cpp  main_database.cpp  pass_gen.cpp  record_list_model.cpp  register.cpp  setting_loader.cpp  source.cmake  user_database.cpp  user_db.cpp
src/gui/: copy_to_clipboard.cpp  generate_password.cpp  login_register_manager.cpp
src/hash/: hash.cpp
src/headers/: database_utils.h  gui.h  hash.h  main_database.h  pass_gen.h  user_database.h
src/register_login/: login.cpp  register.cpp
src/settings/: setting_loader.cpp
tests/: CMakeLists.txt  tests_user_database.cpp
